--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
     <div class="minuteHub"></div>
     <div class="secondHub"></div>
   </div>
-  <script type="application/javascript" src="scripts/index.js"></script>
+  <script src="scripts/index.js"></script>
 </body>
 </html>
