Hid face gradient

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="faceBackground"></div>
     <div class="faceShadow"></div>
-    <div class="faceGradient"></div>
+    <!--<div class="faceGradient"></div>-->
     <div class="faceRing"></div>
     <div class="faceRingOuter"></div>
 
