Replace shadow hands with .hands filter: drop-shadow

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="faceBackground"></div>
     <div class="faceShadow"></div>
-    <!--<div class="faceGradient"></div>-->
+    <div class="faceGradient"></div>
     <div class="faceRing"></div>
     <div class="faceRingOuter"></div>
 
@@ -23,53 +23,15 @@
     <div class="ticks"></div>
 
     <div class="hands">
-      <div class="hour">
-        <svg id="theSVG" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-             xmlns="http://www.w3.org/2000/svg">
-          <image width="100%" height="100%" xlink:href="images/clock-hands.svg"
-                 preserveAspectRatio="none" />
-        </svg>
-      </div>
-      <div class="minute">
-        <svg id="theSVG" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-             xmlns="http://www.w3.org/2000/svg">
-          <image width="100%" height="100%" xlink:href="images/clock-hands.svg"
-                 preserveAspectRatio="none" />
-        </svg>
-      </div>
-      <div class="second">
-        <svg id="theSVG" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-             xmlns="http://www.w3.org/2000/svg">
-          <image width="100%" height="100%" xlink:href="images/clock-hands.svg"
-                 preserveAspectRatio="none" />
-        </svg>
+      <div class="hand hour"></div>
+      <div class="hand minute"></div>
+      <div class="hand second">
         <div class="tail"></div>
       </div>
-
-      <div class="hour shadow">
-        <svg id="theSVG" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-             xmlns="http://www.w3.org/2000/svg">
-          <image width="100%" height="100%" xlink:href="images/clock-hands.svg"
-                 preserveAspectRatio="none" />
-        </svg></div>
-      <div class="minute shadow">
-        <svg id="theSVG" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-             xmlns="http://www.w3.org/2000/svg">
-          <image width="100%" height="100%" xlink:href="images/clock-hands.svg"
-                 preserveAspectRatio="none" />
-        </svg></div>
-      <div class="second shadow">
-        <svg id="theSVG" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-             xmlns="http://www.w3.org/2000/svg">
-          <image width="100%" height="100%" xlink:href="images/clock-hands.svg"
-                 preserveAspectRatio="none" />
-        </svg>
-        <div class="tail"></div>
-      </div>
+      <div class="minuteHub"></div>
+      <div class="secondHub"></div>
     </div>
 
-    <div class="minuteHub"></div>
-    <div class="secondHub"></div>
   </div>
   <script src="scripts/index.js"></script>
 </body>
