added test span

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div class="title">SCHOTT</div>
     <div class="monthYear"><span class="month"></span><span class="day"></span><span class="year"></span></div>
+    <span class=""></span>
 
     <div class="numbers"></div>
 
