Changed name to clock, and removed test span

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <div class="faceRing"></div>
     <div class="faceRingOuter"></div>
 
-    <div class="title">SCHOTT</div>
+    <div class="title">CLOCK</div>
     <div class="monthYear"><span class="month"></span><span class="day"></span><span class="year"></span></div>
-    <span class=""></span>
 
     <div class="numbers"></div>
 
