--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Schott Clock</title>
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="faceRing"></div>
     <div class="faceRingOuter"></div>
 
-    <div class="title">CLOCK</div>
+    <div class="title">Schott</div>
     <div class="monthYear"><span class="month"></span><span class="day"></span><span class="year"></span></div>
 
     <div class="numbers"></div>
